Add new grid functionality to button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="js.js" defer></script>
 </head>
 <body>
-    <button id="newGridBtn">New Grid</button>
+    <button id="newGridBtn" onclick="promptForDims()">New Grid</button>
     <div id="grid-holder"></div>
 </body>
 </html>
